# ai-tryouts

./: main.py  pyproject.toml
